--- a/config_network/sample_configs/config2/S1_config.json
+++ b/config_network/sample_configs/config2/S1_config.json
@@ -83,7 +83,7 @@
                     ],
                     "lines":[
                         "switchport mode access",
-                        "switchport access valn 20"
+                        "switchport access vlan 20"
                     ]
                 },
                 {
@@ -94,7 +94,7 @@
                     ],
                     "lines":[
                         "switchport mode access",
-                        "switchport access valn 30"
+                        "switchport access vlan 30"
                     ]
                 },
                 {
@@ -105,7 +105,7 @@
                     ],
                     "lines":[
                         "switchport mode access",
-                        "switchport access valn 40"
+                        "switchport access vlan 40"
                     ]
                 }
             ]
@@ -114,7 +114,15 @@
     "trunk":{
         "interfaces":{
             "f0/1":[
+                "switchport trunk encapsulation dot1q",
                 "switchport mode trunk",
+                "switchport trunk native vlan 1",
+                "switchport trunk allowed vlan 10,20,30,40"
+            ],
+            "f0/2":[
+                "switchport trunk encapsulation dot1q",
+                "switchport mode trunk",
+                "switchport trunk native vlan 1",
                 "switchport trunk allowed vlan 10,20,30,40"
             ]
         }
