increased the netmiko read timeout value to avoid timeout errors during configurations

--- a/config_network/sample_configs/config2/R1_config.json
+++ b/config_network/sample_configs/config2/R1_config.json
@@ -2,6 +2,7 @@
     "connection_data":{
         "device":"cisco_router",
         "device_type":"cisco_ios",
+        "fast_cli":false,
         "ip_address":"192.168.0.161",
         "port":"22",
         "username":"boson",
