--- a/config_network/sample_configs/config1/R2_config.json
+++ b/config_network/sample_configs/config1/R2_config.json
@@ -1,42 +1,43 @@
 {
     "connection_data":{
-        "device":"router",
-	"device_type":"cisco_ios",
-        "ip_address":"192.168.1.2",
+        "device":"cisco_router",
+        "device_type":"cisco_ios",
+        "fast_cli":false,
+        "ip_address":"192.168.10.2",
         "port":"22",
-        "username":"user",
-        "password":"admin",
+        "username":"boson",
+        "password":"boson",
         "secret":null
     },
-    "global":[],
-    "interfaces":{},
-    "ospf":{
+    "global":[
+        "router ospf 1",
+        "exit"
+    ],
+    "interfaces":{
+        "loopback1":{
+            "iface_type":"loopback",
+            "iface_id":"1",
+            "lines":[
+                "ip address 2.2.2.2 255.255.255.255"
+            ]
+        }
+    },
+    "domain_name_server":{
         "global":[
-            "router ospf 1",
-            "network 192.168.1.0 0.0.0.255 area 1",
-            "network 192.168.2.0 0.0.0.255 area 1",
-            "exit"
-        ],
-        "interfaces":{}
-    },
-    "rip":{
-        "global":[],
-        "interfaces":{}
-    },
-    "eigrp":{
-        "global":[],
-        "interfaces":{}
+            "ip domain-lookup",
+            "ip name-server 192.168.10.2",
+            "ip dns server",
+            "ip host ciaran 192.168.0.3",
+            "ip host mrak 192.168.0.4",
+            "ip host mary 192.168.0.5"
+        ]
     },
     "ntp":{
-        "global":[],
-        "interfaces":{}
-    },
-    "cdp":{
-        "global":[],
-        "interfaces":{}
-    },
-    "lldp":{
-        "global":[],
-        "interfaces":{}
+        "global":[
+            "ntp master 1",
+            "ntp authenticate",
+            "ntp authentication-key 1 md5 boson",
+            "ntp trusted-key 1"
+        ]
     }
 }
