--- a/config_network/sample_configs/config1/S2_config.json
+++ b/config_network/sample_configs/config1/S2_config.json
@@ -2,358 +2,166 @@
     "connection_data":{
         "device":"cisco_switch",
         "device_type":"cisco_ios",
-        "ip_address":"192.168.0.1",
+        "fast_cli":false,
+        "ip_address":"192.168.5.1",
         "port":"22",
-        "username":"user",
-        "password":"admin",
+        "username":"boson",
+        "password":"boson",
         "secret":null
     },
     "global":[
-        "vlan 2",
-        "name group2",
-        "exit",
-        "vlan 3",
-        "name group3",
-        "exit",
-        "vlan 4",
-        "name group4",
-        "exit",
-        "vlan 5",
-        "name group5",
-        "exit",
-        "vlan 6",
-        "name group6",
-        "exit"
+        "ip default-gateway 192.168.5.2"
     ],
     "interfaces":{
-        "f0/1":{
-            "iface_id":"0/1",
-            "iface_type":"fastEthernet",
-            "lines":[
+        "ranges":[
+            {
+                "iface_type":"fastEthernet",
+                "iface_name_prefix":"f",
+                "iface_ids":[
+                    "0/1","0/2","0/3","0/4","0/5","0/6",
+                    "0/7","0/8","0/9","0/10","0/11","0/12",
+                    "0/13","0/14","0/15","0/16","0/17","0/18",
+                    "0/19","0/20","0/21","0/22","0/23","0/24"
+                ],
+                "lines":[]
+            },
+            {
+                "iface_type":"vlan",
+                "iface_name_prefix":"vlan",
+                "iface_ids":["1","10","20","30","40"],
+                "lines":[]
+            }
+        ]
+    },
+    "vlans":{
+        "global":[
+            "vtp mode transparent"
+        ],
+        "interfaces":{
+            "vlan10":[
+                "ip address 192.168.6.1 255.255.255.0",
+                "no shutdown"
+            ],
+            "vlan20":[
+                "ip address 192.168.7.1 255.255.255.0",
+                "no shutdown"
+            ],
+            "vlan30":[
+                "ip address 192.168.8.1 255.255.255.0",
+                "no shutdown"
+            ],
+            "vlan40":[
+                "ip address 192.168.9.1 255.255.255.0",
                 "no shutdown"
             ]
-        },
-        "f0/2":{
-            "iface_id":"0/2",
-            "iface_type":"fastEthernet",
-            "lines":[
-                "no shutdown"
+        }
+    },
+    "access_ports":{
+        "interfaces":{
+            "ranges":[
+                {
+                    "iface_type":"fastEthernet",
+                    "iface_name_prefix":"f",
+                    "iface_ids":["0/5","0/6","0/7","0/8","0/9"],
+                    "lines":[
+                        "switchport mode access",
+                        "switchport access vlan 10"
+                    ]
+                },
+                {
+                    "iface_type":"fastEthernet",
+                    "iface_name_prefix":"f",
+                    "iface_ids":["0/10","0/11","0/12","0/13","0/14"],
+                    "lines":[
+                        "switchport mode access",
+                        "switchport access vlan 20"
+                    ]
+                },
+                {
+                    "iface_type":"fastEthernet",
+                    "iface_name_prefix":"f",
+                    "iface_ids":["0/15","0/16","0/17","0/18","0/19"],
+                    "lines":[
+                        "switchport mode access",
+                        "switchport access vlan 30"
+                    ]
+                },
+                {
+                    "iface_type":"fastEthernet",
+                    "iface_name_prefix":"f",
+                    "iface_ids":["0/20","0/21","0/22","0/23","0/24"],
+                    "lines":[
+                        "switchport mode access",
+                        "switchport access vlan 40"
+                    ]
+                }
             ]
-        },
-        "f0/3":{
-            "iface_id":"0/3",
-            "iface_type":"fastEthernet",
-            "lines":[
-                "no shutdown"
+        } 
+    },
+    "trunks_ports":{
+        "interfaces":{
+            "f0/1":[
+                "switchport trunk encapsulation dot1q",
+                "switchport mode trunk"
             ]
-        },
-        "f0/4":{
-            "iface_id":"0/4",
-            "iface_type":"fastEthernet",
-            "lines":[
-                "no shutdown"
-            ]
-        },
-        "f0/5":{
-            "iface_id":"0/5",
-            "iface_type":"fastEthernet",
-            "lines":[
-                "no shutdown"
-            ]
-        },
-        "f0/6":{
-            "iface_id":"0/6",
-            "iface_type":"fastEthernet",
-            "lines":[
-                "no shutdown"
-            ]
-        },
-        "f0/7":{
-            "iface_id":"0/7",
-            "iface_type":"fastEthernet",
-            "lines":[
-                "no shutdown"
-            ]
-        },
-        "f0/8":{
-            "iface_id":"0/8",
-            "iface_type":"fastEthernet",
-            "lines":[
-                "no shutdown"
-            ]
-        },
-        "f0/9":{
-            "iface_id":"0/9",
-            "iface_type":"fastEthernet",
-            "lines":[
-                "no shutdown"
-            ]
-        },
-        "f0/10":{
-            "iface_id":"0/10",
-            "iface_type":"fastEthernet",
-            "lines":[
-                "no shutdown"
-            ]
-        },
-        "f0/11":{
-            "iface_id":"0/11",
-            "iface_type":"fastEthernet",
-            "lines":[
-                "no shutdown"
-            ]
-        },
-        "f0/12":{
-            "iface_id":"0/12",
-            "iface_type":"fastEthernet",
-            "lines":[
-                "no shutdown"
-            ]
-        },
-        "f0/13":{
-            "iface_id":"0/13",
-            "iface_type":"fastEthernet",
-            "lines":[
-                "no shutdown"
-            ]
-        },
-        "f0/14":{
-            "iface_id":"0/14",
-            "iface_type":"fastEthernet",
-            "lines":[
-                "no shutdown"
-            ]
-        },
-        "f0/15":{
-            "iface_id":"0/15",
-            "iface_type":"fastEthernet",
-            "lines":[
-                "no shutdown"
-            ]
-        },
-        "f0/16":{
-            "iface_id":"0/16",
-            "iface_type":"fastEthernet",
-            "lines":[
-                "no shutdown"
-            ]
-        },
-        "f0/17":{
-            "iface_id":"0/17",
-            "iface_type":"fastEthernet",
-            "lines":[
-                "no shutdown"
-            ]
-        },
-        "f0/18":{
-            "iface_id":"0/18",
-            "iface_type":"fastEthernet",
-            "lines":[
-                "no shutdown"
-            ]
-        },
-        "f0/19":{
-            "iface_id":"0/19",
-            "iface_type":"fastEthernet",
-            "lines":[
-                "no shutdown"
-            ]
-        },
-        "f0/20":{
-            "iface_id":"0/20",
-            "iface_type":"fastEthernet",
-            "lines":[
-                "no shutdown"
-            ]
-        },
-        "f0/21":{
-            "iface_id":"0/21",
-            "iface_type":"fastEthernet",
-            "lines":[
-                "no shutdown"
-            ]
-        },
-        "f0/22":{
-            "iface_id":"0/22",
-            "iface_type":"fastEthernet",
-            "lines":[
-                "no shutdown"
-            ]
-        },
-        "f0/23":{
-            "iface_id":"0/23",
-            "iface_type":"fastEthernet",
-            "lines":[
-                "no shutdown"
-            ]
-        },
-        "f0/24":{
-            "iface_id":"0/24",
-            "iface_type":"fastEthernet",
-            "lines":[
-                "no shutdown"
-            ]
-        },
-        "vlan1":{
-            "iface_type":"vlan",
-            "iface_id":"1",
-            "lines":[
-                "no shutdown"
-            ]
-        },
-        "vlan2":{
-            "iface_type":"vlan",
-            "iface_id":"2",
-            "lines":[
-                "no shutdown"
-            ]
-        },
-        "vlan3":{
-            "iface_type":"vlan",
-            "iface_id":"3",
-            "lines":[
-                "no shutdown"
-            ]
-        },
-        "vlan4":{
-            "iface_type":"vlan",
-            "iface_id":"4",
-            "lines":[
-                "no shutdown"
-            ]
-        },
-        "vlan5":{
-            "iface_type":"vlan",
-            "iface_id":"5",
-            "lines":[
-                "no shutdown"
-            ]
-        },
-        "vlan6":{
-            "iface_type":"vlan",
-            "iface_id":"6",
-            "lines":[
-                "no shutdown"
+        }
+    },
+    "name_server":{
+        "global":[
+            "ip domain-lookup",
+            "ip name-server 192.168.10.2"
+        ]
+    },
+    "ntp":{
+        "global":[
+            "ntp server 192.168.20.2",
+            "ntp authenticate",
+            "ntp authentication-key 1 md5 boson",
+            "ntp trusted-key 1"
+        ]
+    },
+    "dhcp_snooping":{
+        "global":[
+            "ip dhcp snooping",
+            "ip dhcp snooping vlan 10,20,30,40"
+        ],
+        "interfaces":{
+            "ranges":[
+                {
+                    "iface_type":"fastEthernet",
+                    "iface_name_prefix":"f",
+                    "iface_ids":[
+                        "0/5","0/6","0/7","0/8","0/9",
+                        "0/10","0/11","0/12","0/13","0/14",
+                        "0/15","0/16","0/17","0/18","0/19",
+                        "0/20","0/21","0/22","0/23","0/24"
+                    ],
+                    "lines":[
+                        "no ip dhcp snooping trust"
+                    ]
+                }
             ]
         }
     },
     "arp_inspection":{
-        "global":[],
-        "interfaces":{}
-    },
-    "dhcp_snooping":{
-        "global":[],
-        "interfaces":{}
-    },
-    "port_security":{
-        "global":[],
-        "interfaces":{}
-    },
-    "spanning_tree":{
-        "global":[],
-        "interfaces":{}
-    },
-    "access":{
-        "global":[],
+        "global":["ip arp inspection vlan 10,20,30,40"],
         "interfaces":{
-            "f0/3":[
-                "switchport mode access",
-                "switchport access vlan 2"
-            ],
-            "f0/4":[
-                "switchport mode access",
-                "switchport access vlan 2"
-            ],
-            "f0/5":[
-                "switchport mode access",
-                "switchport access vlan 3"
-            ],
-            "f0/6":[
-                "switchport mode access",
-                "switchport access vlan 3"
-            ],
-            "f0/7":[
-                "switchport mode access",
-                "switchport access vlan 4"
-            ],
-            "f0/8":[
-                "switchport mode access",
-                "switchport access vlan 4"
-            ],
-            "f0/9":[
-                "switchport mode access",
-                "switchport access vlan 5"
-            ],
-            "f0/10":[
-                "switchport mode access",
-                "switchport access vlan 5"
-            ],
-            "f0/11":[
-                "switchport mode access",
-                "switchport access vlan 6"
-            ],
-            "f0/12":[
-                "switchport mode access",
-                "switchport access vlan 6"
+            "ranges":[
+                {
+                    "iface_type":"fastEthernet",
+                    "iface_name_prefix":"f",
+                    "iface_ids":[
+                        "0/5","0/6","0/7","0/8",
+                        "0/9","0/10","0/11","0/12",
+                        "0/13","0/14","0/15","0/16",
+                        "0/17","0/18","0/19","0/20",
+                        "0/21","0/22","0/23","0/24"
+                    ],
+                    "lines":[
+                        "no ip arp inspection trust"
+                    ]
+                }
             ]
         }
-    },
-    "trunk":{
-        "global":[],
-        "interfaces":{
-            "f0/13":[
-                "switchport trunk allowed vlan 1,2"
-            ],
-            "f0/14":[
-                "switchport trunk allowed vlan 1,2"
-            ],
-            "f0/15":[
-                "switchport trunk allowed vlan 3,4"
-            ],
-            "f0/16":[
-                "switchport trunk allowed vlan 3,4"
-            ],
-            "f0/17":[
-                "switchport trunk allowed vlan 5,6"
-            ],
-            "f0/18":[
-                "switchport trunk allowed vlan 5,6"
-            ]
-        }
-    },
-    "vlans":{
-        "global":[],
-        "interfaces":{
-            "vlan1":[
-                "no shutdown"
-            ],
-            "vlan2":[
-                "no shutdown"
-            ],
-            "vlan3":[
-                "no shutdown"
-            ],
-            "vlan4":[
-                "no shutdown"
-            ],
-            "vlan5":[
-                "no shutdown"
-            ],
-            "vlan6":[
-                "no shutdown"
-            ]
-        }
-    },
-    "ntp":{
-        "global":[],
-        "interfaces":{}
-    },
-    "cdp":{
-        "global":[],
-        "interfaces":{}
-    },
-    "lldp":{
-        "global":[],
-        "interfaces":{}
     }
 }
