--- a/config_network/sample_configs/config1/S2_config.json
+++ b/config_network/sample_configs/config1/S2_config.json
@@ -38,22 +38,38 @@
             "vtp mode transparent"
         ],
         "interfaces":{
-            "vlan10":[
-                "ip address 192.168.6.1 255.255.255.0",
-                "no shutdown"
-            ],
-            "vlan20":[
-                "ip address 192.168.7.1 255.255.255.0",
-                "no shutdown"
-            ],
-            "vlan30":[
-                "ip address 192.168.8.1 255.255.255.0",
-                "no shutdown"
-            ],
-            "vlan40":[
-                "ip address 192.168.9.1 255.255.255.0",
-                "no shutdown"
-            ]
+            "vlan10":{
+                "iface_type":"vlan",
+                "iface_id":"10",
+                "lines":[
+                    "ip address 192.168.6.1 255.255.255.0",
+                    "no shutdown"    
+                ]
+            },
+            "vlan20":{
+                "iface_type":"vlan",
+                "iface_id":"20",
+                "lines":[
+                    "ip address 192.168.7.1 255.255.255.0",
+                    "no shutdown"
+                ]
+            },
+            "vlan30":{
+                "iface_type":"vlan",
+                "iface_id":"30",
+                "lines":[
+                    "ip address 192.168.8.1 255.255.255.0",
+                    "no shutdown"
+                ]
+            },
+            "vlan40":{
+                "iface_type":"vlan",
+                "iface_id":"40",
+                "lines":[
+                    "ip address 192.168.9.1 255.255.255.0",
+                    "no shutdown"
+                ]
+            }
         }
     },
     "access_ports":{
@@ -98,12 +114,16 @@
             ]
         } 
     },
-    "trunks_ports":{
+    "trunk_ports":{
         "interfaces":{
-            "f0/1":[
-                "switchport trunk encapsulation dot1q",
-                "switchport mode trunk"
-            ]
+            "f0/1":{
+                "iface_type":"fastethernet",
+                "iface_id":"0/1",
+                "lines":[
+                    "switchport trunk encapsulation dot1q",
+                    "switchport mode trunk"
+                ]
+            }
         }
     },
     "name_server":{
